# pydantic-fhir-extensions

./: README.md  pyproject.toml
pydantic_fhir_extensions/: base.py  element.py  extension_validator.py  questionnaire.py  util.py
pydantic_fhir_extensions/extensions/: __init__.py  item_control.py  toggle_exclusive.py
pydantic_fhir_extensions/types/: CodeableConcept.py  Expression.py  __init__.py  coding.py
tests/: test_base_extension.py  test_extensions.py
